# Apexe

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  resources.qrc
resources/: algorithms (2).json  algorithms.json  algorithms.txt
sources/: Apexe.cpp  Apexe.h
sources/bank_page/: BankPage.cpp  BankPage.h  BankPage.ui
sources/bank_page/source/bank/: Bank.cpp  Bank.h
sources/bank_page/source/bank_account/: BankAccount.cpp  BankAccount.h
sources/bank_page/source/transaction/: Transaction.cpp  Transaction.h
sources/bank_page/source/transaction_generator/: TransactionGenerator.cpp  TransactionGenerator.h
sources/game_page/: GamePage.cpp  GamePage.h  GamePage.ui
sources/game_page/sources/: RockPaperScissors.cpp  RockPaperScissors.h
sources/main_window/: MainWindow.cpp  MainWindow.h
sources/page/: Page.cpp  Page.h
sources/sort_page/: CreateSortWidget.cpp  SortPage.cpp  SortPage.h  SortPage.ui
sources/sort_page/sources/bubble_sort/: BubbleSort.cpp  BubbleSort.h
sources/sort_page/sources/insertion_sort/: InsertionSort.cpp  InsertionSort.h
sources/sort_page/sources/merge_sort/: MergeSort.cpp  MergeSort.h
sources/sort_page/sources/quick_sort/: QuickSort.cpp  QuickSort.h
sources/sort_page/sources/selection_sort/: SelectionSort.cpp  SelectionSort.h
sources/sort_page/sources/sort/: Sort.cpp  Sort.h
sources/welcome_page/: WelcomePage.cpp  WelcomePage.h  WelcomePage.ui
styles/: bankPage.qss  gamePage.qss  mainWindow.qss
util/parserFile/: ParserFile.cpp  ParserFile.h
util/style/: applyStyleSheet.cpp  applyStyleSheet.h
util/widgets/: widgets.cpp  widgets.h
